tests/negative/neg_pr113_access_tuple_element.safe
package neg_pr113_access_tuple_element
   type int_access is access integer;
   value : (int_access, integer);

